# SmmServer

./: .env  .gitignore  .gitmodules  LICENSE  README.md  SmmServer.sln  SmmServer.spec  build.py  fix_pe_headers.py  fix_zip_timestamps.py  main.py  pretendo.py  proxy.py  pyproject.toml  requirements.txt  test_flet.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
Certs/: Pretendo.der  Pretendo.pem  account.nintendo.net.crt  account.nintendo.net.pem  wup-ama.app.nintendo.net.crt  wup-ama.app.nintendo.net.pem
Configs/: Pretendo++.ini  settings.ini
SmmServer/: Extensions.cs  Program.cs  SmmServer.Designer.cs  SmmServer.cs  SmmServer.csproj  SslTcpClient.cs  app.config
SmmServer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
